<?xml version="1.0"  encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView1"
                style="@style/styleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:text="@string/voltage"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/voltageEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|number"
                android:selectAllOnFocus="true"
                android:text="400" >
               
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView4"
                style="@style/styleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:text="@string/power"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/powerEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|numberDecimal"
                android:selectAllOnFocus="true"
                android:text="0" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView11"
                style="@style/styleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:text="@string/powerfactor"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/powerfactorEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|numberDecimal"
                android:selectAllOnFocus="true"
                android:text="0.85" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView3"
                style="@style/styleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:text="@string/effeciency"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/efficiencyEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|numberDecimal"
                android:selectAllOnFocus="true"
                android:text="0.90" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/TextView2"
                style="@style/styleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".5"
                android:text="@string/startmode"
                android:textAppearance="?android:attr/textAppearance" />

            <Spinner
                android:id="@+id/StartmodeSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/isBidirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/isbidirectional" />
        </TableRow>

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

    </LinearLayout>


</ScrollView>
